docs: fix contrast issue

--- a/styleguide-assets/overrides.scss
+++ b/styleguide-assets/overrides.scss
@@ -18,12 +18,13 @@
   }
 
   // code snippets
-  .rsg--root-63 {
+  .rsg--root-63, .rsg--root-65 {
     color: rgb(211, 34, 196) !important;
     textarea {
       font-size: 16px !important;
     }
     pre {
+      color: #e4e4e4 !important;
       font-size: 16px !important;
 
       // start https://github.com/PrismJS/prism-themes/blob/master/themes/prism-atom-dark.css
